--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@types/qrcode.react": "^1.0.5",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.344.0",
     "papaparse": "^5.5.2",
     "pdfjs-dist": "^4.0.379",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
