--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.1",
     "uuid": "^9.0.1",
-    "wavesurfer.js": "^7.7.3"
+    "wavesurfer.js": "^7.7.3",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
