--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "bash deploy.sh",
-    "build": "vite build",
+    "dev": "bash compile.sh",
+    "build": "bash compile.sh",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "bash compile.sh"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-select": "^2.2.6",
     "@types/qrcode.react": "^1.0.5",
+    "@types/react-avatar-editor": "^13.0.4",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "emoji-picker-react": "^4.8.0",
     "framer-motion": "^11.0.3",
@@ -25,6 +29,7 @@
     "pdfjs-dist": "^4.0.379",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
@@ -32,6 +37,8 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.1",
+    "react-spinners": "^0.17.0",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^9.0.1",
     "wavesurfer.js": "^7.7.3",
     "zustand": "^5.0.6"
